testsuite/bsc.typechecker/typeclasses/ATFDeclParamMismatch.bs
package ATFDeclParamMismatch where

-- Test that a type function declaration whose parameter names don't match the
-- class parameter names is an error (T0158).

class Container f e | f -> e where
  type Elem g = e  -- wrong: should be 'f', not 'g'
  unwrap :: f -> e
